Fix border-radius on resolved marker on mobile

--- a/resources/css/bem/beatmap-discussion.less
+++ b/resources/css/bem/beatmap-discussion.less
@@ -91,7 +91,9 @@
     width: 5px;
     height: 100%;
 
-    border-radius: @border-radius-base 0 0 @border-radius-base;
+    @media @desktop {
+      border-radius: @border-radius-base 0 0 @border-radius-base;
+    }
 
     &--resolved {
       background-color: @osu-colour-lime-3;
